# StreamInfa

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  reliability-smoke.yml
benches/: pipeline_micro.rs
config/: default.toml
docker/: Dockerfile  docker-compose.yml  loki-config.yaml  prometheus.yml  promtail-config.yaml
docs/: README.md  learning.md  reliability-audit.md  requirements.md  roadmap.md
docs/architecture/: control-plane-vs-data-plane.md  ingest.md  media-lifecycle.md  overview.md  performance-and-backpressure.md  security.md  storage-and-delivery.md  transcoding-and-packaging.md
docs/devops/: deployment.md  docker.md  release-readiness.md
docs/observability/: observability.md
docs/runbooks/: runbook.md
docs/testing/: benchmarking.md  testing-strategy.md
plans/: README.md  plan-configuration-and-runtime.md  plan-control-plane.md  plan-deployment-and-operations.md  plan-execution-order.md  plan-live-ingest-rtmp.md  plan-media-lifecycle.md  plan-observability.md  plan-performance-and-backpressure.md  plan-security.md  plan-storage-and-delivery.md  plan-testing-and-quality.md  plan-transcoding-and-packaging.md  plan-vod-upload-ingest.md
scripts/: benchmark-capacity.sh  benchmark-fault-injection.sh  benchmark-live-rtmp.sh  benchmark-metrics.sh  benchmark-micro.sh  benchmark-ops-path.sh  benchmark.sh  deploy.sh  generate_test_fixtures.sh  post_deploy_verify.sh  rollback.sh
scripts/k6/: capacity-delivery.js  control-plane.js  delivery-origin.js  fault-delivery.js  overload-backpressure.js  soak-mixed.js  vod-upload.js
src/: lib.rs  main.rs
src/control/: events.rs  mod.rs  pipeline.rs  state.rs
src/core/: auth.rs  config.rs  error.rs  metrics.rs  mod.rs  redact.rs  security.rs  shutdown.rs  types.rs
src/delivery/: handlers.rs  middleware.rs  router.rs
src/ingest/: demuxer.rs  http_upload.rs  mod.rs  rtmp.rs  validator.rs
src/observability/: metrics.rs  (+2 more)
tests/: e2e_playback_flow.rs  integration_control_plane.rs
(+18 files in other folders)
